--- a/styles/globals.css
+++ b/styles/globals.css
@@ -173,19 +173,7 @@ width: 100%;
   width: 450px;
   height: 450px;
 }
-@media screen and (max-width: 600px){
-  .hero-banner-container{
-    height: 450px;
-    position: relative;
-  }
-  .hero-banner-image{
-    position: absolute;
-    top: 10%;
-    right:20%;
-    width: 250px;
-    height: 250px;
-  }
-}
+
 .desc{
 position: absolute;
 right: 10%;
@@ -649,7 +637,8 @@ margin-top: 160px;
     width: 77%;
     left: 30%;
     top: 6%;
-    height: 56%
+    height: 56%;
+    z-index: -1;
   }
   .banner-desc .left h3{
     font-weight: 900;
@@ -686,6 +675,7 @@ margin-top: 160px;
     z-index: 10000;
   }
   .beats-solo{
+    z-index: 999;
     margin-top: -30px;
     font-weight: bolder;
   }
@@ -856,5 +846,18 @@ s {
   .col-25, .col-75, input[type=submit] {
     width: 100%;
     margin-top: 0;
+  }
+}
+@media only screen and (max-width:600px) {
+  .hero-banner-container{
+    height: 450px;
+    position: relative;
+  }
+  .hero-banner-image{
+    position: absolute;
+    top: 10%;
+    right:0%;
+    width: 250px;
+    height: 250px;
   }
 }
